removed all references to petstore and replaced them with swagger
