# v2/nodejs/api/swagger.json
@@ -1021,7 +1021,7 @@
   "description" : "Post you want to update",
   "required" : true,
   "schema" : {
-    "$ref" : "#/definitions/PostInput"
+    "$ref" : "#/definitions/Post"
   }
 }
         
@@ -1341,19 +1341,10 @@
       "$ref" : "#/definitions/Post"
     }
   }
-},"PostRequest": {
+},"Postrequest": {
   "properties" : {
     "post" : {
       "$ref" : "#/definitions/PostInput"
-    }
-  }
-},"Posts": {
-  "properties" : {
-    "posts" : {
-      "type" : "array",
-      "items" : {
-        "$ref" : "#/definitions/Post"
-      }
     }
   }
 },"Post": {
@@ -1407,9 +1398,6 @@
 },"PostInput": {
   "required" : [ "title" ],
   "properties" : {
-    "_id" : {
-      "type" : "string"
-    },
     "title" : {
       "type" : "string"
     },
